syntax = "proto3";

package com.ayo.orderprocessing;

option java_multiple_files = true;
option java_package = "com.ayo.orderprocessingservice";
option java_outer_classname = "OrderProcessing";

service OrderProcessing {
  rpc ProcessOrder(ProcessOrderRequest) returns (ProcessOrderResponse);
}

message ProcessOrderRequest {
  string order_id = 1;
  repeated OrderItem items = 2;

  message OrderItem {
    string product_id = 1;
    int32 quantity = 2;
  }
}

message ProcessOrderResponse {
  string order_id = 1;
  bool success = 2;
}